fix spacing between sections

--- a/themes/Newspaper/includes/less_files/custom_style_cna.less
+++ b/themes/Newspaper/includes/less_files/custom_style_cna.less
@@ -277,7 +277,7 @@ p {
 			background-color: @background_color_21;
 			text-align: center;
 			padding: 0 !important;
-			margin-bottom: 20px;
+			margin-bottom: @space_2;
 			.entry-thumb,
 			.td-module-thumb,
 			.item-details {
@@ -1639,6 +1639,7 @@ p {
 		margin-top: 9px; //Cuenta padding y margin superiores
 		@media (max-width: 767px) {
 			margin-top: 10px;
+			margin-bottom: -26px; //reswpcna
 		}
 		.video-module-thumb {
 			// margin-bottom: 5px;
